|
Quick Lists
|
|
Bug ID:
|
6697236
|
|
Votes
|
0
|
|
Synopsis
|
missing Identity for "(X+Y) - X" into Y
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b01)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
02-MAY-2008
|
|
Description
|
C2 misses the identity "(X+Y) - X" into Y
Posted Date : 2008-05-02 22:28:13.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See suggested fix
Posted Date : 2008-05-02 22:29:04.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |