6697236: missing Identity for "(X+Y) - X" into Y

Reviewed-by: kvn